--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   },
   "devDependencies": {
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "papaparse": "^5.4.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
+    "styled-components": "^6.1.11"
   }
 }
